<resources>
    <string name="app_name">BugetManagement</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_premium">Premium</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_income_info">Income info.</string>
    <string name="menu_item_report">Report</string>
    <string name="menu_item_settings">Settings</string>
    <string name="about">About</string>
    <string name="main_save_instance_success_message">Starea a fost salavata</string>
    <string name="main_update_text_and_color_error_message">Provided information is not good</string>
    <string name="main_selected_option">Optiunea selectat este</string>
    <string name="about_application_name">Buget Application</string>
    <string name="about_version">Version: 1.o</string>
    <string name="about_team">Team: Grupa 1065, 1066, 1072 and 1076</string>
    <string name="about_year">Year: 2018</string>
    <string name="new_expense_date_hint">Date dd-MM-yyyy</string>
    <string name="new_expense_amount_hint">Amount</string>
    <string name="new_expense_description_hint">Description</string>
    <string name="new_expense_save">Save</string>
    <string name="income_info_cash_hint">Cash</string>
    <string name="income_info_credit_card">Credit card</string>
    <string name="income_info_meal_tickets_hint">Meal tickets</string>
    <string name="income_info_total_income">Total income:</string>
    <string name="profile_first_name_hint">First name</string>
    <string name="profile_last_name_hint">Last name</string>
    <string name="profile_age_hint">Age</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="premium_bronze_label">Bronze</string>
    <string name="premium_silver_label">Silver</string>
    <string name="premium_gold_label">Gold</string>
    <string name="new_expense_date_valid_error">Date is not valid or dd-MM-yyyy is not matched</string>
    <string name="new_expense_description_valid_error">Description is not valid</string>
    <string name="new_expense_amount_valid_error">Amount is not valid</string>
    <string name="main_activity_result_error_message">The result is not good</string>
    <string name="lv_expenses_row_currency">RON</string>
    <string name="expense_adapter_no_date_msg">No Date</string>
    <string name="expense_adapter_no_amount_msg">No amount</string>
    <string name="main_result_activity_error">Result is not ok</string>
    <string name="profile_rg_gender_label">Gender</string>
    <string name="profile_shared_edit_result">Datele au fost salvate</string>
    <string name="profile_shared_editor_result_error">Datele nu au fost salvate</string>
    <string name="premium_premium_parser_error">Parsarea nu a functionat</string>
    <string name="premium_no_content">Nu exista continut</string>
    <string name="main_update_success">Actualizare cu succes</string>
    <string name="main_update_failed">Nu s-a putut actualiza</string>
    <string name="main_alert_title">Stergere cheltuiala</string>
    <string name="main_alert_message">Sunteti siguri ca vreti sa stergeti cheltuiala din data %1$s ?</string>
    <string name="main_alert_no_date">No date</string>
    <string name="main_alert_positive_button">Da</string>
    <string name="main_alert_delete_success">Cheltuiala s-a sters cu succes</string>
    <string name="main_alert_delete_failed">Cheltuiala nu s-a sters</string>
    <string name="main_alert_negative_button">Nu</string>
    <string name="main_alert_delete_cancel">Stergere anulata</string>
    <string name="report_sqlite_check_question">Date din Sqlite?</string>

    <string-array name="new_expense_categories_values">
        <item>Food</item>
        <item>Clothes</item>
        <item>Presents</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="item_map">Harta</string>
</resources>
