<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:title="@string/menu_item_home" />

    <item
        android:id="@+id/item_profile"
        android:title="@string/menu_item_profile" />

    <item
        android:id="@+id/item_premium"
        android:title="@string/menu_item_premium" />

    <item
        android:id="@+id/item_income_info"
        android:title="@string/menu_item_income_info" />

    <item
        android:id="@+id/item_report"
        android:title="@string/menu_item_report" />

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_item_settings" />

    <item
        android:id="@+id/item_about"
        android:title="@string/about" />

    <item
        android:id="@+id/item_map"
        android:title="@string/item_map" />
</menu>