<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PremiumActivity"
    android:orientation="horizontal"
    android:layout_weight="3">

    <Button
        android:id="@+id/premium_btn_bronze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/premium_bronze_label"/>


    <Button
        android:id="@+id/premium_btn_silver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/premium_silver_label"/>


    <Button
        android:id="@+id/premium_btn_gold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/premium_gold_label"/>


</LinearLayout>